@@ -10,7 +10,6 @@ The following common keys are supported:
 * :ref:`escaper <conf_server_common_escaper>`
 * :ref:`auditor <conf_server_common_auditor>`
 * :ref:`shared_logger <conf_server_common_shared_logger>`
-* :ref:`listen <conf_server_common_listen>`
 * :ref:`listen_in_worker <conf_server_common_listen_in_worker>`
 * :ref:`tls_server <conf_server_common_tls_server>`
 
@@ -24,6 +23,19 @@ The following common keys are supported:
 * :ref:`task_idle_check_duration <conf_server_common_task_idle_check_duration>`
 * :ref:`task_idle_max_count <conf_server_common_task_idle_max_count>`
 * :ref:`extra_metrics_tags <conf_server_common_extra_metrics_tags>`
+
+listen
+------
+
+**optional**, **type**: :ref:`tcp listen <conf_value_tcp_listen>`
+
+Set the listen config for this server.
+
+The instance count setting will be ignored if *listen_in_worker* is correctly enabled.
+
+**default**: not set
+
+.. versionadded:: 1.7.20 change listen config to be optional
 
 upstream
 --------
