@@ -67,7 +67,7 @@ pub(crate) struct HttpProxyServerConfig {
     pub(crate) auditor: MetricsName,
     pub(crate) user_group: MetricsName,
     pub(crate) shared_logger: Option<AsciiString>,
-    pub(crate) listen: TcpListenConfig,
+    pub(crate) listen: Option<TcpListenConfig>,
     pub(crate) listen_in_worker: bool,
     pub(crate) server_tls_config: Option<RustlsServerConfigBuilder>,
     pub(crate) client_tls_config: OpensslTlsClientConfigBuilder,
@@ -109,7 +109,7 @@ impl HttpProxyServerConfig {
             auditor: MetricsName::default(),
             user_group: MetricsName::default(),
             shared_logger: None,
-            listen: TcpListenConfig::default(),
+            listen: None,
             listen_in_worker: false,
             server_tls_config: None,
             client_tls_config: Default::default(),
@@ -186,8 +186,9 @@ impl HttpProxyServerConfig {
                 Ok(())
             }
             "listen" => {
-                self.listen = g3_yaml::value::as_tcp_listen_config(v)
+                let config = g3_yaml::value::as_tcp_listen_config(v)
                     .context(format!("invalid tcp listen config value for key {k}"))?;
+                self.listen = Some(config);
                 Ok(())
             }
             "listen_in_worker" => {
