@@ -67,7 +67,7 @@ pub(crate) struct SocksProxyServerConfig {
     pub(crate) auditor: MetricsName,
     pub(crate) user_group: MetricsName,
     pub(crate) shared_logger: Option<AsciiString>,
-    pub(crate) listen: TcpListenConfig,
+    pub(crate) listen: Option<TcpListenConfig>,
     pub(crate) listen_in_worker: bool,
     pub(crate) use_udp_associate: bool,
     pub(crate) udp_bind4: Vec<IpAddr>,
@@ -99,7 +99,7 @@ impl SocksProxyServerConfig {
             auditor: MetricsName::default(),
             user_group: MetricsName::default(),
             shared_logger: None,
-            listen: TcpListenConfig::default(),
+            listen: None,
             listen_in_worker: false,
             use_udp_associate: false,
             udp_bind4: Vec::new(),
@@ -166,8 +166,9 @@ impl SocksProxyServerConfig {
                 Ok(())
             }
             "listen" => {
-                self.listen = g3_yaml::value::as_tcp_listen_config(v)
+                let config = g3_yaml::value::as_tcp_listen_config(v)
                     .context(format!("invalid tcp listen config value for key {k}"))?;
+                self.listen = Some(config);
                 Ok(())
             }
             "listen_in_worker" => {
