@@ -42,7 +42,7 @@ pub(crate) struct TlsStreamServerConfig {
     pub(crate) escaper: MetricsName,
     pub(crate) auditor: MetricsName,
     pub(crate) shared_logger: Option<AsciiString>,
-    pub(crate) listen: TcpListenConfig,
+    pub(crate) listen: Option<TcpListenConfig>,
     pub(crate) listen_in_worker: bool,
     pub(crate) server_tls_config: RustlsServerConfigBuilder,
     pub(crate) client_tls_config: Option<OpensslTlsClientConfigBuilder>,
@@ -66,7 +66,7 @@ impl TlsStreamServerConfig {
             escaper: MetricsName::default(),
             auditor: MetricsName::default(),
             shared_logger: None,
-            listen: TcpListenConfig::default(),
+            listen: None,
             listen_in_worker: false,
             server_tls_config: RustlsServerConfigBuilder::empty(),
             client_tls_config: None,
@@ -122,8 +122,9 @@ impl TlsStreamServerConfig {
                 Ok(())
             }
             "listen" => {
-                self.listen = g3_yaml::value::as_tcp_listen_config(v)
+                let config = g3_yaml::value::as_tcp_listen_config(v)
                     .context(format!("invalid tcp listen config value for key {k}"))?;
+                self.listen = Some(config);
                 Ok(())
             }
             "listen_in_worker" => {
